--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <ul>
         <li><a href="/dynlib">dynlib</a>: Dynamic library loading</li>
         <li><a href="/hydrogen">hydrogen</a>: A simple wrapper around libhydrogen</li>
-        <li><a href="/sqlite">sqlite</a>: A simple high-level wrapper around SQLite3</li>
+        <li><a href="/sqlite3">sqlite3</a>: A simple high-level wrapper around SQLite3</li>
         <li><a href="/zlib">zlib</a>: a high-level wrapper around ZLib</li>
       </ul>
       <h3>Miscellaneous</h3>
