fix link to using

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <li><a href="/diff">diff</a>: A simple diffing algorithm</li>
         <li><a href="/grep">grep</a>: Simple pattern matching</li>
         <li><a href="/physics">physics</a>: A module for physics</li>
-        <li><a href="/using">using</a>: Context Managers</li>
+        <li><a href="https://github.com/carpentry-org/using">using</a>: Context Managers</li>
       </ul>
     </div>
   </body>
