--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li><a href="/semver">semver</a>: Semantic versions</li>
         <li><a href="/uri">uri</a>: A URI datatype and parser</li>
         <li><a href="/utf8">utf8</a>: A small library for UTF8 strings</li>
-        <li><a href="/uuid">uuid</a>: A simple UUID library and data type, conforming to RFC 4122</li>
+        <li><a href="https://github.com/carpentry-org/uuid">uuid</a>: A simple UUID library and data type, conforming to RFC 4122</li>
       </ul>
       <h3>Data Types &amp; Data Structures</h3>
       <ul>
