move misc links

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
       </ul>
       <h3>Logging</h3>
       <ul>
-        <li><a href="/filelog">filelog</a>: A simple file-based logger</li>
-        <li><a href="/log">log</a>: A logging facade</li>
-        <li><a href="/simplelog">simplelog</a>: The simplest logging backend to <a href="/log">log</a></li>
+        <li><a href="https://github.com/carpentry-org/filelog">filelog</a>: A simple file-based logger</li>
+        <li><a href="https://github.com/carpentry-org/log">log</a>: A logging facade</li>
+        <li><a href="https://github.com/carpentry-org/simplelog">simplelog</a>: The simplest logging backend to <a href="/log">log</a></li>
       </ul>
       <h3>Networking</h3>
       <ul>
@@ -65,9 +65,9 @@
       <h3>Miscellaneous</h3>
       <ul>
         <li><a href="/cli">cli</a>: A simple CLI library</li>
-        <li><a href="/diff">diff</a>: A simple diffing algorithm</li>
-        <li><a href="/grep">grep</a>: Simple pattern matching</li>
-        <li><a href="/physics">physics</a>: A module for physics</li>
+        <li><a href="https://github.com/carpentry-org/diff">diff</a>: A simple diffing algorithm</li>
+        <li><a href="https://github.com/carpentry-org/grep">grep</a>: Simple pattern matching</li>
+        <li><a href="https://github.com/carpentry-org/physics">physics</a>: A module for physics</li>
         <li><a href="https://github.com/carpentry-org/using">using</a>: Context Managers</li>
       </ul>
     </div>
