--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <h2>Packages</h2>
       <h3>Encodings &amp; Parsers</h3>
       <ul>
+        <li><a href="https://github.com/carpentry-org/ast">ast</a>: A library for working with Carp ASTs in dynamic Carp</li>
         <li><a href="/base64">base64</a>: A base64 library</li>
         <li><a href="/semver">semver</a>: Semantic versions</li>
         <li><a href="/uri">uri</a>: A URI datatype and parser</li>
