--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         <li><a href="/cli">cli</a>: A simple CLI library</li>
         <li><a href="https://github.com/carpentry-org/diff">diff</a>: A simple diffing algorithm</li>
         <li><a href="https://github.com/carpentry-org/grep">grep</a>: Simple pattern matching</li>
+        <li><a href="https://github.com/carpentry-org/lens.carp">lens</a>: Lenses & Prisms, convenient handlers for nested data types</li>
         <li><a href="https://github.com/carpentry-org/physics">physics</a>: A module for physics</li>
         <li><a href="https://github.com/carpentry-org/using">using</a>: Context Managers</li>
       </ul>
